# stf

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  Makefile  log.h  main.cxx  test_framework.h
src/tests/: strings.cxx  test_groups.h
